tests/errors/tc_expr_input_msgtype.lx
@module "main"

pub const main -> fn () int {
    input<int>(42);
    return 0;
}
